<resources>
    <string name="app_name" translatable="false">My Capi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="score">SCORE:</string>
    <string name="shop">SHOP</string>
    <string name="increase_add_stats">INCREASE ADD STATS</string>
    <string name="decrease_countdown_time">DECREASE COUNTDOWN TIME</string>
    <string name="high_score">HIGH SCORES</string>
    <string name="you_are_lose">YOU ARE LOSE</string>
    <string name="current_level">CURRENT LEVEL:</string>
    <string name="price">PRICE:</string>
    <string name="difficult">DIFFICULT</string>
    <string name="easy">EASY</string>
    <string name="normal">NORMAL</string>
    <string name="hard">HARD</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="close">CLOSE</string>
    <string name="continue">CONTINUE</string>
    <string name="play">PLAY</string>
    <string name="settings">SETTINGS</string>
    <string name="exit">EXIT</string>

</resources>