<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difficult"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginHorizontal="48dp"/>
        <Button
            android:id="@+id/easy_btn"
            android:text="@string/easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/normal_btn"
            android:text="@string/normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/hard_btn"
            android:text="@string/hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>